# rewordle

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  routes.py  settings.py
src/alembic/versions/: e352c61b94d7_initial.py
src/db/: __init__.py  game.py
src/resources/: dict_all.txt  dictionary.txt
src/rewordle/: models.py  utils.py  views.py
src/service/: views.py
tests/: conftest.py  test_rewordle.py  test_service.py  test_utils.py
