[tool.poetry]
name = "Rewordle"
version = "0.0.1"
description = "A famous word game reloaded"
authors = ["Igor Golyanov <thornograph@gmail.com>"]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.dependencies]
python = "~3.9"
uvicorn = "^0.17.0"
fastapi = "^0.72.0"
sqlalchemy = { "extras" = ["mypy"], version = "^1.4.29" }
asyncpg = "^0.25.0"
psycopg2-binary = "^2.9.3"
alembic = "^1.7.5"
prometheus-fastapi-instrumentator = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^3.0.0"
pytest-xdist = { extras = ["psutil"], version = "^2.5.0" }
pylint = "^2.12.2"
isort = "^5.10.1"
docformatter = "^1.4"
black = "^21.12b0"
mypy = "^0.931"
ipython = "^8.0.1"
pytest-asyncio = "^0.17.2"
httpx = "^0.21.3"
requests = "^2.27.1"

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]
follow_imports = "silent"
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["uvicorn", "prometheus_client", "prometheus_fastapi_instrumentator.*"]
ignore_missing_imports = true

[tool.pylint.master]
fail-under = 7.5
ignore-paths = [".*/alembic/.*.py"]
# ignore pydantic no-name-in-module error
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.messages_control]
disable = [
    # functions should mainly be short and self-explanatory
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
    # pydantic models usually have none
    "too-few-public-methods",
    "logging-fstring-interpolation"
]

[tool.pylint.miscellaneous]
# only treat FIXMEs as worthy warnings
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
